# opnVote

./: .gitignore  Cargo.toml  README.md
documentation/: README.md  guide.tree  homepage.tree  v.list  writerside.cfg
documentation/cfg/: build-groups.xml  buildprofiles.xml
documentation/cfg/static/: Cuprite.css  custom.css
documentation/topics/: How-to-Help.md  guide.md  homepage.md  setup-dev.md
opnvote-backbone/: Cargo.toml  README.md
opnvote-backbone/src/: main.rs
opnvote-common/: Cargo.toml  README.md
opnvote-common/src/: electoral_list.rs  lib.rs  token.rs
opnvote-kiosk/: Cargo.toml  README.md
opnvote-vote-controller/: Cargo.toml  README.md
opnvote-vote-controller/src/: main.rs  mtls.rs
opnvote-vote-machine/: Cargo.toml  README.md
opnvote-vote-machine/src/: main.rs  vote.rs
resources/: README.md  electoral_list.json  revoked_tokens.txt
resources/certs/: ca-intermediate-client.crt  ca-intermediate-client.csr  ca-intermediate-client.key  ca-intermediate-client.srl  ca-intermediate-server.crt  ca-intermediate-server.csr  ca-intermediate-server.key  ca-intermediate-server.srl  ca-root.crt  ca-root.key  ca-root.srl  client-full-chain.crt  client.crt  client.csr  client.key  client.p12  server-full-chain.crt  server.crt  server.csr  server.key
resources/keys/: ed25519-public.pub  ed25519-public.test.pub  ed25519.pk8  ed25519.test.pk8
tooling/: Cargo.toml  README.md
tooling/src/: generate_mtls_chain.sh  mtls_client.sh  mtls_server.sh
