[package]
name = "opnvote-vote-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-rustls = "0.26.2"
rustls = "0.23.28"
rustls-pemfile = "2.2.0"
anyhow = "1.0.98"